--- a/Non-Diabetic2/html/ar/3.html
+++ b/Non-Diabetic2/html/ar/3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,74 +15,83 @@
 </head>
     <body class="bg-light" style="text-align: right; font-family: 'Times';">
         <div class="swipeable arabic">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>الدرس الثاني</strong>
+                    </div>
                 </div>
-                <div class="col text-center text-white">
-                   الدرس ٢
-                  </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="4.html" class="text-white text-nowrap"><small>التالي</small></a>
-                </div>
-            </div>
-        </header>
+            </header>
         <main class="">
-            <nav class="nav justify-content-center timeline mt-2 mb-4">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1 navigation-page-count arabic-page-count">
+                        <p>٣/٧</p>
+                    </div>
+                    <div class="col-10 text-center indicator-set arabic-indicator-set">
+                        <a class="page-indicator page-indicator-active arabic-first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top arabic-close" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">لما يُعد فقدان الوزن صعبًا للغاية؟</h5>
-                        <hr class="special mb-5">
-                        <p class="dr-mb-35">يدرك أي شخص حاول الالتزام بحمية غذائية مدى صعوبة فقدان الوزن. وقد تبين أن فقدان الوزن لا يحتاج إلى قوة إرادة أكبر أو سعرات حرارية أقل، بل توجد العديد من الأمور التي تساهم في فقدان الوزن، نذكر منها:</p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <h5 class="card-title">لما يُعد فقدان الوزن صعبًا للغاية؟</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">يدرك أي شخص حاول الالتزام بحمية غذائية مدى صعوبة فقدان الوزن. وقد تبين أن فقدان الوزن لا يحتاج إلى قوة إرادة أكبر أو سعرات حرارية أقل، بل توجد العديد من الأمور التي تساهم في فقدان الوزن، نذكر منها:</p>
                         <ul class="list-unstyled text-center">
                             <li>
                                 <img src="../images/human-body.svg" height="52">
-                                <p class="mt-2 font-weight-bold">علم الأحياء البشري</p>
-                                <p class="dr-mb-35">يخزن جسمك الدهون بشكل طبيعي لتوفير الطاقة عند الحاجة إليها (فكر في وضع النجاة). وهنا تأتي الهرمونات التي تزود جسمك بإشارات لتناول المزيد من الطعام أو أنك لم تحصل على كفايتك من الطعام.</p>
+                                <p class="mt-4 font-weight-bold">علم الأحياء البشري</p>
+                                <p class="card-text mb-4 card-text-opacity">يخزن جسمك الدهون بشكل طبيعي لتوفير الطاقة عند الحاجة إليها (فكر في وضع النجاة). وهنا تأتي الهرمونات التي تزود جسمك بإشارات لتناول المزيد من الطعام أو أنك لم تحصل على كفايتك من الطعام.</p>
                             </li>
                             <li>
                                 <img src="../images/cake-slice.svg" height="52">
-                                <p class="mt-2 font-weight-bold">اختيارات الطعام</p>
-                                <p class="dr-mb-35">يدفعنا نوعان مختلفان من المنبهات لتناول الطعام: داخلية وخارجية. تأتي المنبهات الداخلية من نظام الجوع في جسمك باستخدام الهرمونات لتشعرك بإحساس الجوع. أما المنبهات الخارجية فتتمثل فقط في رغبتك في تناول الطعام أو ولعك به. </p>
+                                <p class="mt-4 font-weight-bold">اختيارات الطعام</p>
+                                <p class="card-text mb-4 card-text-opacity">يدفعنا نوعان مختلفان من المنبهات لتناول الطعام: داخلية وخارجية. تأتي المنبهات الداخلية من نظام الجوع في جسمك باستخدام الهرمونات لتشعرك بإحساس الجوع. أما المنبهات الخارجية فتتمثل فقط في رغبتك في تناول الطعام أو ولعك به. </p>
                             </li>
                             <li>
                                 <img src="../images/dna.svg" height="52">
-                                <p class="mt-2 font-weight-bold">الجينات الوراثية </p>
-                                <p class="dr-mb-35">يزداد وزن بعض الأشخاص أسرع من غيرهم. ويمتلك بعض الأشخاص معدلاً أعلى لحرق السعرات الحرارية، مما لا يكسبهم وزنًا زائدًا على الإطلاق. كما قد تؤثر جيناتك الوراثية على ميل جسمك لتكوين الخلايا الدهنية وتخزينها. ولكن تذكر: لا تحدد جيناتك الوراثية مصيرك بنسبة 100%.</p>
+                                <p class="mt-4 font-weight-bold">الجينات الوراثية </p>
+                                <p class="card-text mb-4 card-text-opacity"">يزداد وزن بعض الأشخاص أسرع من غيرهم. ويمتلك بعض الأشخاص معدلاً أعلى لحرق السعرات الحرارية، مما لا يكسبهم وزنًا زائدًا على الإطلاق. كما قد تؤثر جيناتك الوراثية على ميل جسمك لتكوين الخلايا الدهنية وتخزينها. ولكن تذكر: لا تحدد جيناتك الوراثية مصيرك بنسبة 100%.</p>
                             </li>
                             <li>
                                 <img src="../images/fries.svg" height="52">
-                                <p class="mt-2 font-weight-bold">البيئة</p>
-                                <p class="dr-mb-35">يرتبط اكتساب الوزن بعوامل نمط الحياة. في الوقت الذي تنخفض فيه فرص ممارسة النشاط البدني، لا عجب في أن يصبح اكتساب الوزن شائعًا للغاية. كما تتوافر الأطعمة الخفيفة غير الصحية مثل رقائق البطاطس والحلوى في كل زاوية بالمتاجر. وتتسبب مطاعم الوجبات السريعة في صعوبة اختيار البدائل الصحية. وحتى على مواقع التواصل الاجتماعي، ستجد إعلانات الطعام التي تجذبك لتناول الأطعمة الغنية بالدهون والسكريات. </p>
+                                <p class="mt-4 font-weight-bold">البيئة</p>
+                                <p class="card-text mb-4 card-text-opacity">يرتبط اكتساب الوزن بعوامل نمط الحياة. في الوقت الذي تنخفض فيه فرص ممارسة النشاط البدني، لا عجب في أن يصبح اكتساب الوزن شائعًا للغاية. كما تتوافر الأطعمة الخفيفة غير الصحية مثل رقائق البطاطس والحلوى في كل زاوية بالمتاجر. وتتسبب مطاعم الوجبات السريعة في صعوبة اختيار البدائل الصحية. وحتى على مواقع التواصل الاجتماعي، ستجد إعلانات الطعام التي تجذبك لتناول الأطعمة الغنية بالدهون والسكريات. </p>
                             </li>
                             <li>
                                 <img src="../images/light-bolt.svg" height="52">
-                                <p class="mt-2 font-weight-bold">الضغط العصبي</p>
-                                <p class="dr-mb-35">يعد الضغط العصبي أحد أكثر الأسباب شيوعًا لزيادة الوزن. عندما نشعر بالضغط النفسي بسبب ظروف الحياة، نتعامل معها من خلال الأكل غير الصحي، معتقدين أن ذلك سيُشعرنا بالتحسن. وعلى الرغم من أنها قد تكون مُتنفسًا قصير المدى، إلا أن تناول الطعام بسبب الضغط العصبي قد يُسبب الشعور بالذنب ولا يعالج السبب الجذري للضغط العصبي. </p>
+                                <p class="mt-4 font-weight-bold">الضغط العصبي</p>
+                                <p class="card-text mb-4 card-text-opacity">يعد الضغط العصبي أحد أكثر الأسباب شيوعًا لزيادة الوزن. عندما نشعر بالضغط النفسي بسبب ظروف الحياة، نتعامل معها من خلال الأكل غير الصحي، معتقدين أن ذلك سيُشعرنا بالتحسن. وعلى الرغم من أنها قد تكون مُتنفسًا قصير المدى، إلا أن تناول الطعام بسبب الضغط العصبي قد يُسبب الشعور بالذنب ولا يعالج السبب الجذري للضغط العصبي. </p>
                             </li>
                         </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="2.html" class="btn btn-link text-info mb-3">سابق</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="4.html" class="btn bottom-block-button mb-3" role="button">التالي</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="4.html" class="btn btn-link text-info mb-3">التالي</a>
+                    <div class="col-5 px-1">
+                        <a href="2.html" class="btn bottom-block-button mb-3" role="button">خلف</a>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
+        </div>
 </body>
 </html>
