--- a/Non-Diabetic2/html/ar/4.html
+++ b/Non-Diabetic2/html/ar/4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,53 +15,61 @@
 </head>
     <body class="bg-light" style="text-align: right; font-family: 'Times';">
         <div class="swipeable arabic">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>الدرس الثاني</strong>
+                    </div>
                 </div>
-                <div class="col text-center text-white">
-                   الدرس ٢
-                  </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="5.html" class="text-white text-nowrap"><small>التالي</small></a>
-                </div>
-            </div>
-        </header>
+            </header>
         <main class="">
-            <nav class="nav justify-content-center timeline mt-2 mb-4">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1 navigation-page-count arabic-page-count">
+                        <p>٤/٧</p>
+                    </div>
+                    <div class="col-10 text-center indicator-set arabic-indicator-set">
+                        <a class="page-indicator page-indicator-active arabic-first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top arabic-close" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">السعرات الحرارية والوزن</h5>
-                        <hr class="special mb-5">
-                        <p>لكي تفقد الوزن، تحتاج إلى حرق سعرات حرارية أكثر من كميات الأكل التي تتناولها. </p>
-						<p>السعرات الحرارية هي مقياس للطاقة. يحتاج جسم الإنسان إلى الطاقة لتشغيل وظائف الجسم ( ضربات القلب والتنفس والهضم والنوم ) بالإضافة الى دعم النشاط البدني مثل الجلوس والوقوف والجري والقيام بالأعمال المنزلية. تؤثر عوامل مثل الجنس والعمر والارتفاع على احتياجاتك اليومية من السعرات الحرارية ، وكذلك مستوى نشاطك البدني.</p>
-						<p>معرفة كمية الطاقة التي نأخذها من خلال تناول الطعام ومقدار حصة الطعام التي نأكلها  مهم في انقاص الوزن. من المعروف أن  الأشخاص الذين يهتمون بمتابعة ما يأكلونه هم أكثر عرضة لفقدان الوزن والحفاظ عليه!</p>
-						
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <h5 class="card-title">السعرات الحرارية والوزن</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">لكي تفقد الوزن، تحتاج إلى حرق سعرات حرارية أكثر من كميات الأكل التي تتناولها. </p>
+						<p class="card-text mb-4 card-text-opacity">السعرات الحرارية هي مقياس للطاقة. يحتاج جسم الإنسان إلى الطاقة لتشغيل وظائف الجسم ( ضربات القلب والتنفس والهضم والنوم ) بالإضافة الى دعم النشاط البدني مثل الجلوس والوقوف والجري والقيام بالأعمال المنزلية. تؤثر عوامل مثل الجنس والعمر والارتفاع على احتياجاتك اليومية من السعرات الحرارية ، وكذلك مستوى نشاطك البدني.</p>
+						<p class="card-text mb-4 card-text-opacity">معرفة كمية الطاقة التي نأخذها من خلال تناول الطعام ومقدار حصة الطعام التي نأكلها  مهم في انقاص الوزن. من المعروف أن  الأشخاص الذين يهتمون بمتابعة ما يأكلونه هم أكثر عرضة لفقدان الوزن والحفاظ عليه!</p>
+                            </div>
+                        </div>
                    	 </div>
-                        <div class="bg-info p-3 mb-3 text-white">
+                        <div class="bg-droobi-color p-3 mb-3 text-white">
                             <strong><p class="m-0">نصائح دروبي</p></strong>
                             <p>لا يتتبع دروبي السعرات الحرارية، وإنما يساعدك على تتبع الطعام الذي تتناوله ومقدار حصتك من الأكل. ورغم ذلك، نعتقد أنه من المهم بالنسبة لك أن تفهم السعرات الحرارية ومدى ارتباطها بفقدان الوزن.</p>
 							
 						</div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="3.html" class="btn btn-link text-info mb-3">سابق</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="5.html" class="btn bottom-block-button mb-3" role="button">التالي</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="5.html" class="btn btn-link text-info mb-3">التالي</a>
+                    <div class="col-5 px-1">
+                        <a href="3.html" class="btn bottom-block-button mb-3" role="button">خلف</a>
                     </div>
-            </div>
+                </div>
         </div>
     </main>
 	</div>
