--- a/Non-Diabetic2/html/ar/6.html
+++ b/Non-Diabetic2/html/ar/6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,67 +15,106 @@
 </head>
     <body class="bg-light" style="text-align: right; font-family: 'Times';">
         <div class="swipeable arabic">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                <a href="index.html" class="text-white"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-            </div>
-            <div class="col text-center text-white">
-                   الدرس ٢
-                  </div>
-            <div class="col d-flex justify-content-end">
-                <a href="7.html" class="text-white text-nowrap"><small>التالي</small></a>
-            </div>
-        </div>
-    </header>
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>الدرس الثاني</strong>
+                    </div>
+                </div>
+            </header>
     <main class="">
-        <div class="container-fluid">
-            <div class="row mb-3">
-                <div class="col px-0">
-                    <!-- image here -->
-                    <img src="../images/shutterstock_1059710234.jpg" alt="" class="img-fluid">
+        <nav class="my-2">
+            <div class="row justify-content-between navigation-header">
+                <div class="col-1 navigation-page-count arabic-page-count">
+                    <p>٦/٧</p>
+                </div>
+                <div class="col-10 text-center indicator-set arabic-indicator-set">
+                    <a class="page-indicator page-indicator-active arabic-first-component-indicator"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator"></a>
+                </div>
+                <div class="col-1">
+                    <div class="col-12 d-flex">
+                        <a href="index.html" class="close-button-top arabic-close" role="button"><i class="fas fa-times-circle"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <nav class="nav justify-content-center timeline mt-2 mb-4">
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
         </nav>
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center">السعرات الحرارية والنشاط</h5>
-                    <hr class="special mb-5">
-					<p>قد لا يكون لديك خلفية عن هذا الموضوع ولكن هل تعلم أن التنفس يحرق السعرات الحرارية!
- يستخدم جسمك السعرات الحرارية كطاقة لأداء العمل اليومي، مثل التنفس، والوقوف والكتابة. ورغم ذلك، تعد ممارسة الرياضة عنصرًا أساسيًا لفقدان الوزن، وحرق كمية كبيرة من السعرات الحرارية. 
-</p>				
-					<p>فيما يلي نوضح بعض الطرق المختلفة لحرق الدهون من خلال ممارسة الرياضة. ولكن تذكر هذه الأرقام ليس أساسيه حيث يعتمد حرق الدهون على طبيعة التمارين التي تمارسها ووزنك أيضاً </p>
-                    <ol type="1">
-                        <li>
-                            ميل واحد من المشي السريع (من 15 إلى 20 دقيقة) = حوالي 100 سعر حراري
-                        </li>
-						<li>ميلين من المشي البطيئ (لمدة ساعة) = حرق 150 سعر حراري</li>
-						<li>صعود الدرج (15 دقيقة)= حرق 150 سعر حراري</li>
-						<li>نط الحبل (15 دقيقة)= حرق 150 سعر حراري</li>
-						<li>الرياضة المائية (30 دقيقة) = حرق 150 سعر حراري </li>
-                    </ol>
+                    <div class="card shadow border-0 mb-3">
+                        <div class="card-body">
+                    <div class="row mb-3">
+                        <div class="col">
+                            <!-- image here -->
+                            <img src="../images/shutterstock_1059710234.jpg" alt="" class="img-fluid about-img">
+                        </div>
+                    </div>
+                    <h5 class="card-title">السعرات الحرارية والنشاط</h5>
+					<p class="card-text mb-4 mt-3 card-text-opacity">قد لا يكون لديك خلفية عن هذا الموضوع ولكن هل تعلم أن التنفس يحرق السعرات الحرارية!
+ يستخدم جسمك السعرات الحرارية كطاقة لأداء العمل اليومي، مثل التنفس، والوقوف والكتابة. ورغم ذلك، تعد ممارسة الرياضة عنصرًا أساسيًا لفقدان الوزن، وحرق كمية كبيرة من السعرات الحرارية.
+                     </p>
+					<p class="card-text mb-4 card-text-opacity">فيما يلي نوضح بعض الطرق المختلفة لحرق الدهون من خلال ممارسة الرياضة. ولكن تذكر هذه الأرقام ليس أساسيه حيث يعتمد حرق الدهون على طبيعة التمارين التي تمارسها ووزنك أيضاً </p>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer mt-1">
+                                    <i class="fas fa-angle-left"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">ميل واحد من المشي السريع (من 15 إلى 20 دقيقة) = حوالي 100 سعر حراري</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-left"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">ميلين من المشي البطيئ (لمدة ساعة) = حرق 150 سعر حراري</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-left"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">صعود الدرج (15 دقيقة)= حرق 150 سعر حراري</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer mt-1">
+                                    <i class="fas fa-angle-left"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">نط الحبل (15 دقيقة)= حرق 150 سعر حراري</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-left"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">الرياضة المائية (30 دقيقة) = حرق 150 سعر حراري </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row mt-3">
-                <div class="col d-flex justify-content-start text-left px-1">
-                    <a href="5.html" class="btn btn-link text-info mb-3">سابق</a>
+            <div class="row justify-content-around mt-3">
+                <div class="col-5 text-left px-1">
+                    <a href="7.html" class="btn bottom-block-button mb-3" role="button">التالي</a>
                 </div>
-                <div class="col d-flex justify-content-end px-1">
-                    <a href="7.html" class="btn btn-link text-info mb-3">التالي</a>
+                <div class="col-5 px-1">
+                    <a href="5.html" class="btn bottom-block-button mb-3" role="button">خلف</a>
                 </div>
             </div>
         </div>
     </main>
+        </div>
 </body>
 
 </html>
