--- a/Non-Diabetic2/html/en/3.html
+++ b/Non-Diabetic2/html/en/3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,74 +15,83 @@
 </head>
     <body class="bg-light">
         <div class="swipeable">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 2</strong>
+                    </div>
                 </div>
-                <div class="col text-center text-white">
-                    <strong>Lesson 2</strong>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="4.html" class="text-white text-nowrap"><small>Next</small></a>
-                </div>
-            </div>
-        </header>
+            </header>
         <main class="">
-            <nav class="nav justify-content-center timeline mt-2 mb-4">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-10 text-center indicator-set">
+                        <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1 navigation-page-count">
+                        <p>3/7</p>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">Why is it so hard to lose weight?</h5>
-                        <hr class="special mb-5">
-                        <p class="dr-mb-35">Anyone who has ever tried to go on a diet understands how hard it is to lose weight. It turns out that losing weight doesn’t require more willpower or fewer calories. There are many roles that play in weight loss, such as:</p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <h5 class="card-title">Why is it so hard to lose weight?</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">Anyone who has ever tried to go on a diet understands how hard it is to lose weight. It turns out that losing weight doesn’t require more willpower or fewer calories. There are many roles that play in weight loss, such as:</p>
                         <ul class="list-unstyled text-center">
                             <li>
                                 <img src="../images/human-body.svg" height="52">
-                                <p class="mt-2 font-weight-bold">Human biology</p>
-                                <p class="dr-mb-35">Your body naturally stores fat to save up for energy when you will need it (think of survival mode). With that comes hormones that provide your body with signals to eat more when you don’t have enough food.</p>
+                                <p class="mt-4 font-weight-bold">Human biology</p>
+                                <p class="card-text mb-4 mt-3 card-text-opacity">Your body naturally stores fat to save up for energy when you will need it (think of survival mode). With that comes hormones that provide your body with signals to eat more when you don’t have enough food.</p>
                             </li>
                             <li>
                                 <img src="../images/cake-slice.svg" height="52">
-                                <p class="mt-2 font-weight-bold">Food choices</p>
-                                <p class="dr-mb-35">We are driven by two different cues to eat food: internal and external. Internal cues are from your body’s hunger system that uses hormones to feel a sense of hunger. External cues are driven by just wanting or liking food. </p>
+                                <p class="mt-4 font-weight-bold">Food choices</p>
+                                <p class="card-text mb-4 mt-3 card-text-opacity">We are driven by two different cues to eat food: internal and external. Internal cues are from your body’s hunger system that uses hormones to feel a sense of hunger. External cues are driven by just wanting or liking food. </p>
                             </li>
                             <li>
                                 <img src="../images/dna.svg" height="52">
-                                <p class="mt-2 font-weight-bold">Genetics</p>
-                                <p class="dr-mb-35">Some people can put on weight faster than others. Some people have a naturally high calorie burning rate, so they don’t put on as much weight. Your genes can also affect your body’s tendency to develop and store fat cells. But remember: your genetics do NOT 100% determine your destiny.</p>
+                                <p class="mt-4 font-weight-bold">Genetics</p>
+                                <p class="card-text mb-4 mt-3 card-text-opacity">Some people can put on weight faster than others. Some people have a naturally high calorie burning rate, so they don’t put on as much weight. Your genes can also affect your body’s tendency to develop and store fat cells. But remember: your genetics do NOT 100% determine your destiny.</p>
                             </li>
                             <li>
                                 <img src="../images/fries.svg" height="52">
-                                <p class="mt-2 font-weight-bold">Environment</p>
-                                <p class="dr-mb-35">Weight gain is associated with lifestyle factors. In a time where there are fewer opportunities for physical activity, it’s no wonder weight gain is so common. Also, unhealthy snack foods like chips and candy are found in convenience stores at every corner. Chains of fast food restaurants make it difficult to pick healthy choices. Even on social media you will find food advertisements that are tempting you to eat high-fat and sugary foods. </p>
+                                <p class="mt-4 font-weight-bold">Environment</p>
+                                <p class="card-text mb-4 mt-3 card-text-opacity">Weight gain is associated with lifestyle factors. In a time where there are fewer opportunities for physical activity, it’s no wonder weight gain is so common. Also, unhealthy snack foods like chips and candy are found in convenience stores at every corner. Chains of fast food restaurants make it difficult to pick healthy choices. Even on social media you will find food advertisements that are tempting you to eat high-fat and sugary foods. </p>
                             </li>
                             <li>
                                 <img src="../images/light-bolt.svg" height="52">
-                                <p class="mt-2 font-weight-bold">Stress</p>
-                                <p class="dr-mb-35">Stress is one of the most common causes of weight gain. When we feel overwhelmed by life’s daily challenges, we cope with it through unhealthy eating, thinking that it will make us feel better. And while it may provide short term relief, stress eating can cause feelings of guilt and does not address the root cause of stress.  </p>
+                                <p class="mt-4 font-weight-bold">Stress</p>
+                                <p class="card-text mb-4 mt-3 card-text-opacity">Stress is one of the most common causes of weight gain. When we feel overwhelmed by life’s daily challenges, we cope with it through unhealthy eating, thinking that it will make us feel better. And while it may provide short term relief, stress eating can cause feelings of guilt and does not address the root cause of stress.  </p>
                             </li>
                         </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="2.html" class="btn btn-link text-info mb-3" rel="external">Back</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="2.html" class="btn bottom-block-button mb-3" role="button">Back</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="4.html" class="btn btn-link text-info mb-3" rel="external">Next</a>
+                    <div class="col-5 px-1">
+                        <a href="4.html" class="btn bottom-block-button mb-3" role="button">Next</a>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
+        </div>
 </body>
 </html>
