--- a/Non-Diabetic2/html/en/4.html
+++ b/Non-Diabetic2/html/en/4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,51 +15,60 @@
 </head>
     <body class="bg-light">
         <div class="swipeable">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 2</strong>
+                    </div>
                 </div>
-                <div class="col text-center text-white">
-                    <strong>Lesson 2</strong>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="5.html" class="text-white text-nowrap"><small>Next</small></a>
-                </div>
-            </div>
-        </header>
+            </header>
         <main class="">
-            <nav class="nav justify-content-center timeline mt-2 mb-4">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-10 text-center indicator-set">
+                        <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1 navigation-page-count">
+                        <p>4/7</p>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">Calories and Weight</h5>
-                        <hr class="special mb-5">
-                        <p>In order to lose weight, you need to burn more calories than you take in from food and drinks. </p>
-                        <p>A calorie is a measure of energy.  Energy is needed to fuel body functions (heart beating, breathing, digestion and sleeping for example) and support physical activity like sitting, standing, running and doing household chores. Factors like gender, age, and height affect your daily calorie needs, as does your level of physical activity. . </p>
-						<p>Being aware of the amount of energy we take in the food we eat and the portion size is important in losing weight.  We know that people who track what they eat are more likely to lose weight and keep it off!    </p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <h5 class="card-title">Calories and Weight</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">In order to lose weight, you need to burn more calories than you take in from food and drinks. </p>
+                        <p class="card-text mb-4 card-text-opacity">A calorie is a measure of energy.  Energy is needed to fuel body functions (heart beating, breathing, digestion and sleeping for example) and support physical activity like sitting, standing, running and doing household chores. Factors like gender, age, and height affect your daily calorie needs, as does your level of physical activity. . </p>
+						<p class="card-text mb-4 card-text-opacity">Being aware of the amount of energy we take in the food we eat and the portion size is important in losing weight.  We know that people who track what they eat are more likely to lose weight and keep it off!</p>
+                            </div>
+                        </div>
                     </div>
 					<div class="col-12 px-0">
-                        <div class="bg-info p-3 mb-3 text-white">
+                        <div class="bg-droobi-color p-3 mb-3 text-white">
                             <strong><p class="m-0">Droobi Tip</p></strong>
                             <p>With Droobi, you don’t need to stress about calorie counting. Just keep track of your food and portion size by taking a picture. But, there are some basic facts you need to know about food and calories and how they affect your weight loss.</p>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="3.html" class="btn btn-link text-info mb-3" rel="external">Back</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="3.html" class="btn bottom-block-button mb-3" role="button">Back</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="5.html" class="btn btn-link text-info mb-3" rel="external">Next</a>
+                    <div class="col-5 px-1">
+                        <a href="5.html" class="btn bottom-block-button mb-3" role="button">Next</a>
                     </div>
                 </div>
             </div>
