--- a/Non-Diabetic2/html/en/6.html
+++ b/Non-Diabetic2/html/en/6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,59 +15,65 @@
 </head>
     <body class="bg-light">
         <div class="swipeable">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-                </div>
-                <div class="col text-center text-white">
-                    <strong>Lesson 2</strong>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="7.html" class="text-white text-nowrap"><small>Next</small></a>
-                </div>
-            </div>
-        </header>
-        <main class="">
-            <div class="container-fluid">
-                <div class="row mb-3">
-                    <div class="col px-0">
-                        <!-- image here -->
-                        <img src="../images/shutterstock_1059710234.jpg" alt="" class="img-fluid">
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 2</strong>
                     </div>
                 </div>
-            </div>
-            <nav class="nav justify-content-center timeline mt-2 mb-4">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            </header>
+        <main class="">
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-10 text-center indicator-set">
+                        <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1 navigation-page-count">
+                        <p>6/7</p>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">Calories and Activity</h5>
-                        <hr class="special mb-5">
-                        <p>You may not know this, but even breathing burns calories! Your body uses calories as energy to do every day work, like breathing, standing, and typing. But, to burn a significant amount of calories for weight loss, exercise is a key component.. </p>
-                        <p>Below you can find different ways to burn calories through activity. But remember, these numbers are not exact and depend on the intensity of the exercise and your weight.</p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="col">
+                                <!-- image here -->
+                                <img src="../images/shutterstock_1059710234.jpg" alt="" class="img-fluid about-img">
+                            </div>
+                        </div>
+                        <h5 class="card-title">Calories and Activity</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">You may not know this, but even breathing burns calories! Your body uses calories as energy to do every day work, like breathing, standing, and typing. But, to burn a significant amount of calories for weight loss, exercise is a key component.. </p>
+                        <p class="card-text mb-4 card-text-opacity">Below you can find different ways to burn calories through activity. But remember, these numbers are not exact and depend on the intensity of the exercise and your weight.</p>
                         
-                                <p>&#10004;  1 mile of brisk walking (15 to 20 minutes) =100 calories
-								<br>&#10004;  2 miles of slow walking (1 hour) = 150 calories
-								<br>&#10004;  Climbing stairs (15 minutes) = 150 calories
-								<br>&#10004;  Jumping rope (15 minutes) = 150 calories
-								<br>&#10004;  Water aerobics (30 minutes) = 150 calories</p>
-                        
+                                <p class="card-text mb-4 card-text-opacity">&#10004;  1 mile of brisk walking (15 to 20 minutes) =100 calories
+								<br class="card-text mb-4 card-text-opacity">&#10004;  2 miles of slow walking (1 hour) = 150 calories
+								<br class="card-text mb-4 card-text-opacity">&#10004;  Climbing stairs (15 minutes) = 150 calories
+								<br class="card-text mb-4 card-text-opacity">&#10004;  Jumping rope (15 minutes) = 150 calories
+								<br class="card-text mb-4 card-text-opacity">&#10004;  Water aerobics (30 minutes) = 150 calories</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="5.html" class="btn btn-link text-info mb-3" rel="external">Back</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="5.html" class="btn bottom-block-button mb-3" role="button">Back</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="7.html" class="btn btn-link text-info mb-3" rel="external">Next</a>
+                    <div class="col-5 px-1">
+                        <a href="7.html" class="btn bottom-block-button mb-3" role="button">Next</a>
                     </div>
                 </div>
             </div>
