--- a/Non-Diabetic2/html/en/7.html
+++ b/Non-Diabetic2/html/en/7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,67 +15,94 @@
 </head>
     <body class="bg-light">
         <div class="swipeable last">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-                </div>
-                <div class="col text-center text-white">
-                    <strong>Lesson 2</strong>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="quiz.html" class="text-white text-nowrap"><small>Quiz</small></a>
-                </div>
-            </div>
-        </header>
-        <main class="">
-            <div class="container-fluid">
-                <div class="row mb-3">
-                    <div class="col px-0">
-                        <!-- image here -->
-                        <img src="../images/rsz_shutterstock_584492653.jpg" alt="" class="img-fluid">
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 2</strong>
                     </div>
                 </div>
-            </div>
-            <nav class="nav justify-content-center timeline my-3">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
+            </header>
+        <main class="">
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-10 text-center indicator-set">
+                        <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                    </div>
+                    <div class="col-1 navigation-page-count">
+                        <p>7/7</p>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">Balancing Act</h5>
-                        <hr class="special mb-5">
-                        <p>While we don’t think it’s necessary to memorize calorie numbers, it may benefit you to know that every 1 pound of body fat stores about 3,500 calories. </p>
-                        <p>Slow, steady weight loss is the best way to lose body fat. About 1 to 2 pounds per week is recommended. When you eat food, you consume calories. When you move around, you burn calories. Your weight is the balance between the calories you consume and the calories you burn. Losing weight requires that you burn more calories than you take in. Exercising and having fewer calories is the best way to tip the calorie balance in your favor and lose weight. </p>
-                        <p>Calorie Balance</p>
-                        <ul class="dr-mb-35">
-                            <li>Weight is the same: Calories in &equals; Calories out</li>
-                            <li>Gaining weight: Calories in &gt; Calories out</li>
-                            <li>Losing weight: Calories in &lt; Calories out</li>
-                        </ul>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="col">
+                                <!-- image here -->
+                                <img src="../images/rsz_shutterstock_584492653.jpg" alt="" class="img-fluid about-img">
+                            </div>
+                        </div>
+                        <h5 class="card-title">Balancing Act</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">While we don’t think it’s necessary to memorize calorie numbers, it may benefit you to know that every 1 pound of body fat stores about 3,500 calories. </p>
+                        <p class="card-text mb-4 card-text-opacity">Slow, steady weight loss is the best way to lose body fat. About 1 to 2 pounds per week is recommended. When you eat food, you consume calories. When you move around, you burn calories. Your weight is the balance between the calories you consume and the calories you burn. Losing weight requires that you burn more calories than you take in. Exercising and having fewer calories is the best way to tip the calorie balance in your favor and lose weight. </p>
+                        <p class="card-text mb-4 card-text-opacity">Calorie Balance</p>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer mt-1">
+                                        <i class="fas fa-angle-right"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">Weight is the same: Calories in &equals; Calories out</p>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-right"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">Gaining weight: Calories in &gt; Calories out</p>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-right"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">Losing weight: Calories in &lt; Calories out</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 px-0">
-                        <div class="bg-info p-3 mb-3 text-white">
+                        <div class="bg-droobi-color p-3 mb-3 text-white">
                             <p class="m-0">Droobi Tip</p>
                             <small>When you make changes that are part of your lifestyle, you are more likely to lose the weight and keep it off!</small>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="6.html" class="btn btn-link text-info mb-3" rel="external">Back</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="6.html" class="btn bottom-block-button mb-3" role="button">Back</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="quiz.html" class="btn btn-link text-info mb-3" rel="external">Take the quiz</a>
+                    <div class="col-5 px-1">
+                        <a href="quiz.html" class="btn bottom-block-button mb-3" role="button">Take a Quiz</a>
                     </div>
                 </div>
             </div>
         </main>
+        </div>
     </body>
 </html>
